# Embedded-BDI_ESP32

./: CMakeLists.txt  Comandos  Makefile  README.md  copy_examples.sh  sdkconfig.defaults  sdkconfig.old
examples/: README.md  agentspeak.asl
examples/fire_sensor_old/: agent_loop.cpp  agentspeak.asl  functions.cpp  functions.h
examples/fire_sensors/: CMakeLists.txt  agent_loop.cpp  agentspeak.asl  functions.cpp
main/: CMakeLists.txt
main/data/: agentspeak.asl  functions.cpp  functions.h  wifi_station.c
main/src/: agent_loop.cpp
main/src/config/: configuration.h
